# collegesaurus

./: .gitignore  README.md  docusaurus.config.ts  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
i18n/ar/docusaurus-plugin-content-pages/: contribute.mdx
i18n/ar/docusaurus-theme-classic/: footer.json
scripts/: mdx-to-docx.sh  sync-clean.sh  sync-test.sh
scripts/drive_sync/: __init__.py  __main__.py  fetch.py  models.py  report.py
scripts/drive_sync/emit/: __init__.py  format.py  scholarship.py  university.py
scripts/drive_sync/migrate/: __init__.py  __main__.py  emit_docx.py  emit_xlsx.py  reverse_mdx.py
scripts/drive_sync/parse/: __init__.py  assemble.py  docx.py  xlsx.py
scripts/drive_sync/tests/: conftest.py  test_assemble.py  test_emit_format.py  test_fetch_local.py  test_parse_docx.py  test_parse_docx_wrappers.py  test_parse_xlsx.py  test_report.py  test_smoke.py  test_snapshots.py
scripts/drive_sync/tests/fixtures/expected/: aub.ar.mdx  aub.mdx  fulbright.ar.mdx  fulbright.mdx
scripts/drive_sync/tests/fixtures/scholarships/fulbright/: info.ar.docx  info.docx
scripts/drive_sync/tests/fixtures/scholarships/life/: info.ar.docx  info.docx
scripts/drive_sync/tests/fixtures/universities/aub/: info.ar.docx  info.docx  majors.ar.xlsx  majors.xlsx
src/components/UniversityQuickList/: index.tsx
src/pages/: contribute.mdx  index.tsx
stories/: 2026-04-12-intro.mdx  2026-05-10-abdelhamid-intro.mdx  2026-05-10-dana-intro.mdx  authors.yml  tags.yml
